--- a/drivers/virtio/Kconfig
+++ b/drivers/virtio/Kconfig
@@ -132,5 +132,14 @@ config VIRTIO_DMA_SHARED_BUFFER
 	help
 	 This option adds a flavor of dma buffers that are backed by
 	 virtio resources.
+	 
+config VIRTIO_WL
+	bool "Virtio Wayland driver"
+	depends on VIRTIO
+	help
+	 This driver supports proxying of a wayland socket from host to guest.
+
+	 If unsure, say 'N'.
+
 
 endif # VIRTIO_MENU
