--- a/drivers/char/tpm/Kconfig
+++ b/drivers/char/tpm/Kconfig
@@ -180,7 +180,7 @@ config TCG_FTPM_TEE
 config TCG_VIRTIO_VTPM
 	tristate "Virtio vTPM"
 	depends on TCG_TPM && VIRTIO
-	---help---
+	help
 	  This driver provides the guest kernel side of TPM over Virtio. If
 	  you are building Linux to run inside of a hypervisor that supports
 	  TPM over Virtio, say Yes and the virtualized TPM will be
