--- a/arch/x86/configs/x86_64_defconfig
+++ b/arch/x86/configs/x86_64_defconfig
@@ -306,8 +306,8 @@ CONFIG_PHYLIB=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
-CONFIG_SERIAL_8250=y
-CONFIG_SERIAL_8250_CONSOLE=y
+# CONFIG_SERIAL_8250  is not set
+# CONFIG_SERIAL_8250_CONSOLE is not set
 CONFIG_VIRTIO_CONSOLE=y
 # CONFIG_HW_RANDOM_VIA is not set
 CONFIG_HW_RANDOM_VIRTIO=y
@@ -333,7 +333,7 @@ CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_SERIAL=y
-CONFIG_USB_SERIAL_CONSOLE=y
+# CONFIG_USB_SERIAL_CONSOLE is not set
 CONFIG_USB_SERIAL_GENERIC=y
 CONFIG_USB_SERIAL_SIMPLE=y
 CONFIG_USB_SERIAL_CH341=y
@@ -557,3 +557,5 @@ CONFIG_VIRTUALIZATION=y
 
 CONFIG_DRM_I915_DEBUG_GEM=y
 CONFIG_DEBUG_FS=y
+CONFIG_DAX=y
+CONFIG_DAX_DRIVER=y
